--- a/HouseDemo/wear/src/main/AndroidManifest.xml
+++ b/HouseDemo/wear/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault" >
+        android:theme="@android:style/Theme.DeviceDefault"
+        android:keepScreenOn="true">
         <activity
             android:name=".WearActivity"
-            android:label="@string/app_name" >
+            android:label="House" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
