--- a/HouseDemo/wear/src/main/AndroidManifest.xml
+++ b/HouseDemo/wear/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault"
-        android:keepScreenOn="true">
+        android:theme="@android:style/Theme.DeviceDefault">
         <activity
             android:name=".WearActivity"
             android:label="House" >
